--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -34,10 +34,11 @@
     font-size: 1.4rem;
     font-weight: 700;
     text-transform: uppercase;
-    padding: .5rem;
+    padding: .9rem;
     transition-property: background-color;
     transition-duration: 300ms;
 }
-.navegation a:hover{
+.navegation a:hover,
+.active{
     background-color: var(--primary);
 }
